<resources>
    <string name="app_name">miniChat</string>
    <string name="title_chat">对话</string>
    <string name="title_search">AI机器人</string>
    <string name="title_home">我的</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Password">密码</string>
    <string name="Username">用户名</string>
    <string name="Login">登录</string>
    <string name="recommend">还没有账号？点我</string>
    <string name="recommend2">已有账号？点我</string>
    <string name="register">注册</string>
    <string name="PasswordConfirm">请确认密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="resetPassword">确认重置</string>
    <string name="remember_password">记住密码</string>
    <string name="reset">设置新密码</string>
    <string name="name">九月</string>
    <string name="create">创建AI机器人</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="selectAvatar">选择头像</string>
    <string name="name1">名称</string>
    <string name="desc">设定描述</string>
</resources>