<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo"/>

    <EditText
        android:id="@+id/et_reset_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/Username"/>

    <EditText
        android:id="@+id/et_reset_password1"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/Password" />

    <EditText
        android:id="@+id/et_reset_password2"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/PasswordConfirm" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_gold"
        android:textColor="@color/white"
        android:text="@string/resetPassword" />

</LinearLayout>