<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chat.CreateAiActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_back"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_complete"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:text="@string/complete"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_createAvatar"
                android:layout_marginTop="12dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/avatar0"
                android:scaleType="centerCrop"
                app:riv_corner_radius_bottom_left="50dp"
                app:riv_corner_radius_bottom_right="50dp"
                app:riv_corner_radius_top_left="50dp"
                app:riv_corner_radius_top_right="50dp"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectAvatar"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:columnCount="4"
                android:rowCount="2">
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar0"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar0"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar1"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar1"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar2"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar2"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar3"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar3"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar4"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar4"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar5"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar5"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar6"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar6"/>
                <com.example.minichat.utils.SquareImageView
                    android:id="@+id/iv_avatar7"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:background="@drawable/avatar7"/>
            </GridLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="10sp"
                        android:text="@string/name1"/>

                    <EditText
                        android:id="@+id/et_createName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:hint="输入名称"
                        android:background="@null"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_marginStart="12dp"
                        android:singleLine="true" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="10sp"
                        android:text="@string/desc"/>

                    <EditText
                        android:id="@+id/et_createDesc"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:textSize="18sp"
                        android:background="@null"
                        android:inputType="textMultiLine"
                        android:layout_marginStart="12dp"
                        android:maxLines="5"
                        android:hint="请按照你叫xxx作为开头，并为其补充一些你想要的设定，祝您玩的开心😀"
                        android:gravity="top"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/cb_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="10sp"
                        android:text="是否公开"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>